--- a/README
+++ b/README
@@ -7,5 +7,23 @@
   - Just the features I want;
   - Beautiful and easy to maintain code;
   - No more than 500 SLOC;
-  - No configuration outside the main program. Don't display anything
-  (text or icon) to avoid being tempted.
+  - No configuration outside the main program. Don't do anything fancy
+    (text, icon, cursor or color) to avoid the temptation.
+
+* Help
+** Shortcuts
+   'Control-t' is the prefix key. Every shortcut starts with it.
+   - 'n' or 'C-n' is next managed window;
+   - 'p' or 'C-p' is previous managed window;
+   - 'C-t' is last used window;
+   - 't' sends a 'C-t' to current window;
+   - 'c' runs a xterm;
+   - 'e' runs or raise an emacs;
+   - 'w' runs or raise a web browser (configurable in wm.lisp);
+   - 'l' locks the screen with xlock;
+   - 'a' is the app launcher: keys hit after will look for the correct
+     app.
+** Mouse
+   'Meta' (or 'Alt') is the prefix for the mouse.
+   - 'left button' moves the window;
+   - 'right button' resize the window;
