--- a/README.org
+++ b/README.org
@@ -10,9 +10,9 @@
 
 * Help
 ** Install
-   - Install [[http://www.sbcl.org][sbcl]] on your system (should be available via your
+   - Install [[http://www.sbcl.org/][sbcl]] on your system (should be available via your
      system's packages);
-   - Install [[http://www.quicklisp.org][quicklisp]];
+   - Install [[http://www.quicklisp.org/][quicklisp]];
    - Tweak line 5 of wm.lisp to point to your quicklisp directory;
    - Append "[your path to]/wm.lisp" to .xinitrc or .xsession.
 ** Shortcuts
