--- a/README.org
+++ b/README.org
@@ -9,14 +9,18 @@
     (text, icon, cursor or color) to avoid the temptation;
   - No [[http://standards.freedesktop.org/wm-spec/wm-spec-latest.html][EWMH]] as implementing this shit would bloat the code for little
     (if any) improvements.
-
 * Help
 ** Install
-   - Install [[http://www.sbcl.org/][sbcl]] on your system (should be available via your
-     system's packages);
+   - Install [[http://www.sbcl.org/][SBCL]] or [[http://www.clisp.org/][CLISP]] on your system (should be available via
+     your system's packages);
    - Install [[http://www.quicklisp.org/][quicklisp]];
-   - Tweak line 5 of wm.lisp to point to your quicklisp directory;
-   - Append "[your path to]/wm.lisp" to .xinitrc or .xsession.
+   - Tweak line 4 of wm.lisp to point to your quicklisp directory.
+*** with SBCL
+    Append "sbcl --script [your path to]/wm.lisp" to your .xinitrc or
+    .xsession.
+*** with CLISP
+    Append "xhost local:local" and "clisp [your path to]/wm.lisp" to
+     your .xinitrc or .xsession.
 ** Shortcuts
    Control-t is the prefix key. Every shortcut starts with it.
    - n or C-n is next managed window;
@@ -40,6 +44,6 @@
    - right button resize the window;
    - C-middle button close the window.
 ** Emacs
-   One of the first thing that wm.lisp does is to create a swank
-   server on port 4005. You can then connect Emacs/SLIME to it (M-x
-   slime-connect) and hack the window manager live.
+   With SBCL, one of the first thing that wm.lisp does is to create a
+   swank server on port 4005. You can then connect Emacs/SLIME to it
+   (M-x slime-connect) and hack the window manager live.
