--- a/README.org
+++ b/README.org
@@ -37,7 +37,8 @@
      the first window of the given class;
    - =f= toggles the current window to fullscreen (and revert
      size/position when changing focus);
-   - =.= centers the current window.
+   - =.= centers the current window;
+   - =m= toggles mosaic mode of windows.
 ** Mouse
    =Meta= (or =Alt=) is the prefix for the mouse.
    - left button moves the window;
