kill mosaic as it is not really useful

--- a/README.org
+++ b/README.org
@@ -37,8 +37,7 @@
      the first window of the given class;
    - =f= toggles the current window to fullscreen (and revert
      size/position when changing focus);
-   - =.= centers the current window;
-   - =m= toggles mosaic mode of windows.
+   - =.= centers the current window.
 ** Mouse
    =Meta= (or =Alt=) is the prefix for the mouse.
    - left button moves the window;
