--- a/README.org
+++ b/README.org
@@ -2,11 +2,10 @@
   Here is a set of goals for this window manager:
 
   - Common Lisp;
-  - Just the features I want;
   - Simple and easy to maintain code;
   - No more than 500 SLOC;
-  - No configuration outside the main program. Don't do anything fancy
-    (text, icon, cursor or color) to avoid the temptation;
+  - Just functionality: don't do anything fancy (text, icon, cursor or
+    color) to avoid code clutter;
   - No [[http://standards.freedesktop.org/wm-spec/wm-spec-latest.html][EWMH]] as implementing this shit would bloat the code for little
     (if any) improvements.
 * Help
@@ -24,15 +23,36 @@
 
   Note: The optional height and width are used to determine the center
   and the fullscreen region
+** Configuration
+   You can adapt this window manager to suits your need with the
+   =$HOME/.wm.lisp= configuration file. As this file is loaded at
+   startup almost anything can be done: you could probably rewrite
+   your own common lisp window manager from it.
+
+   Here's an example:
+#+BEGIN_SRC lisp
+;; Change the prefix key
+(setf *prefix* (compile-shortcut :control #\a))
+
+;; Use Firefox as web browser
+(defror firefox)
+(defshortcut (#\w) (firefox))
+
+;; Define a new shortcut for a local application and group all the
+;; windows of this app by X Window class.
+(defshortcut (:mod-1 #\e) (run "envi"))
+(push #'(lambda (w) (string= (xclass w) "Idl")) *groupers*)
+#+END_SRC
 ** Shortcuts
-   =Control-t= is the prefix key. Every shortcut starts with it.
+   =Control-t= is the default prefix key. Every shortcut starts with
+   it.
    - =n= or =C-n= is next managed window;
    - =p= or =C-p= is previous managed window;
    - =C-t= is last used window;
    - =t= sends a =C-t= to current window;
    - =c= runs a xterm;
    - =e= runs or raise an emacs;
-   - =w= runs or raise a web browser (configurable in wm.lisp);
+   - =w= runs or raise a web browser (defaults to [[https://opensource.conformal.com/wiki/xombrero][xombrero]]);
    - =C-l= locks the screen with xlock;
    - =a= is the app launcher: keys hit after will look for the correct
      app;
@@ -40,7 +60,9 @@
      the first window of the given class;
    - =f= toggles the current window to fullscreen (and revert
      size/position when changing focus);
-   - =.= centers the current window.
+   - =.= centers the current window;
+   - =R= reloads the configuration file;
+   - =Q= quits the window manager.
 ** Mouse
    =Meta= (or =Alt=) is the prefix for the mouse.
    - left button moves the window;
