--- a/README.org
+++ b/README.org
@@ -42,6 +42,10 @@
 ;; windows of this app by X Window class.
 (defshortcut (:mod-1 #\e) (run "envi"))
 (push #'(lambda (w) (string= (xclass w) "Idl")) *groupers*)
+
+;; Redefine ssh hosts. The default is "cleverly" parsed from
+;; $HOME/.ssh/config if you have one.
+(setf *ssh-hosts* '("alice" "bob"))
 #+END_SRC
 ** Shortcuts
    =Control-t= is the default prefix key. Every shortcut starts with
@@ -53,6 +57,7 @@
    - =c= runs a xterm;
    - =e= runs or raise an emacs;
    - =w= runs or raise a web browser (defaults to [[https://opensource.conformal.com/wiki/xombrero][xombrero]]);
+   - =s= ssh somewhere (in a xterm);
    - =C-l= locks the screen with xlock;
    - =a= is the app launcher: keys hit after will look for the correct
      app;
