--- a/README.org
+++ b/README.org
@@ -68,6 +68,7 @@
    - =f= toggles the current window to fullscreen (and revert
      size/position when changing focus);
    - =.= centers the current window (and revert as fullscreen);
+   - =b= banish mouse pointer;
    - =R= reloads the configuration file;
    - =Q= quits the window manager.
 ** Mouse
