raise SLOC limit

--- a/README.org
+++ b/README.org
@@ -3,9 +3,9 @@
 
   - Common Lisp;
   - Simple and easy to maintain code;
-  - No more than 500 SLOC;
-  - Just functionality: don't do anything fancy (text, icon, cursor or
-    color) to avoid code clutter;
+  - No more than 1000 SLOC;
+  - Just functionality: don't do anything fancy (text, icon, color or
+    decoration) to avoid code clutter;
   - No [[http://standards.freedesktop.org/wm-spec/wm-spec-latest.html][EWMH]] as implementing this shit would bloat the code for little
     (if any) improvements.
 * Help
