don't pretend to not be an emacs user

--- a/README.org
+++ b/README.org
@@ -58,7 +58,7 @@
    - =p= or =C-p= is previous managed window;
    - =c= raises or runs a xterm;
    - =C= runs a new xterm;
-   - =e= raises an existing emacs or runs your $EDITOR;
+   - =e= raises or run an emacs;
    - =w= raises or runs a web browser (defaults to [[https://opensource.conformal.com/wiki/xombrero][xombrero]]);
    - =s= ssh somewhere (in a xterm);
    - =C-l= locks the screen with xlock;
