I barely use temporary fullscreen or center. introducing a new 'pin' feature.

--- a/README.org
+++ b/README.org
@@ -66,6 +66,7 @@
    - =F= toggles the current window to fullscreen permanently;
    - =.= centers the current window (and revert as fullscreen);
    - =b= banish mouse pointer;
+   - =P= pin/unpin the current window;
    - =R= reloads the configuration file;
    - =Q= quits the window manager.
 ** Mouse
