modify close window shortcut

--- a/README.org
+++ b/README.org
@@ -76,7 +76,7 @@
    - left button moves the window;
    - right button resize the window;
    - middle button resize the window maintaining its center position;
-   - Control-Shift-middle button close the window.
+   - Shift-right button close the window.
 ** Emacs
    With SBCL, wm.lisp creates a swank server on port 4005. You can
    then connect Emacs/SLIME to it (=M-x slime-connect=) and hack the
