--- a/README.org
+++ b/README.org
@@ -35,20 +35,20 @@
 (setf *quit* (compile-shortcut :control :shift #\q))
 
 ;; Use Chrome as web browser
-(defshortcut (#\w) (raise-or-launch "chrome"))
+(define-prefix-shortcut (#\w) (raise-or-launch "chrome"))
 
 ;; Define a new shortcut for a local application and group all the
 ;; windows of this app by X Window class.
-(defshortcut (:mod-1 #\e) (raise-or-launch "envi"))
+(define-prefix-shortcut (:mod-1 #\e) (raise-or-launch "envi"))
 (push #'(lambda (w) (string= (xclass w) "Idl")) *families*)
 #+END_SRC
 ** Shortcuts
-   =Control-t= is the default prefix key. Every shortcut starts with
-   it. Hitting the prefix twice takes you to the last used
+   =Control-t= is the default prefix key. Every prefix shortcut starts
+   with it. Hitting the prefix twice takes you to the last used
    window. Hitting the prefix plus the character used by the prefix
    (e.g. =Control-t t=) sends the prefix chord to the current window.
 
-   Default keyboard shortcuts:
+   Default prefix keyboard shortcuts:
    - =n= or =Control-n= is next managed window;
    - =p= or =Control-p= is previous managed window;
    - =c= raises or runs a xterm;
@@ -68,6 +68,10 @@
    - =W= clear any sticky position (pinned or center-pinned);
    - =R= reloads the configuration file;
    - =Q= quits the window manager.
+
+   You can also create direct shortcuts with
+   =define-direct-shortcut=. *Beware* that those shortcuts are grabbed
+   by the root window so choose them wisely.
 ** Mouse
    =Meta= (or =Alt=) is the prefix for the mouse.
    - left button moves the window;
